Fixed item alignment

--- a/public/main.css
+++ b/public/main.css
@@ -75,7 +75,7 @@ ul {
     width: 5em;
     height: 5em;
     border-radius: 50%;
-    border: 0.45em solid #53777A; /*The border is 0.35 but making it larger removes visual artifacts */
+    border: 0.45em solid #0290ff; /*The border is 0.35 but making it larger removes visual artifacts */
     /*background-color: #4D642D;*/ /* for debug */
     box-sizing: border-box;
    
@@ -85,7 +85,7 @@ ul {
     /*Progress bar for the first 50%, filling the whole right half*/
     position: absolute; /*needed for clipping*/
     clip: rect(0, 5em, 5em, 2.5em);
-    background-color: #53777A;
+    background-color: #0290ff;
     border-radius: 50%;
     width: 5em;
     height: 5em;
